ffi/derive/tests/ui_fail/fieldless_enum_without_repr.stderr
error: Fieldless enum missing #[repr(int)]
 --> tests/ui_fail/fieldless_enum_without_repr.rs:5:10
  |
5 | pub enum FfiStruct {
  |          ^^^^^^^^^
